# DigiKey_robot_arm

CRI-Python-Lib/: .pre-commit-config.yaml  README.md  how_to_setup.txt  ip_change.bash  pyproject.toml  requirements.txt  run_arm.bash
CRI-Python-Lib/cri_lib/: __init__.py  cri_controller.py  cri_errors.py  robot_state.py
CRI-Python-Lib/cri_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
CRI-Python-Lib/docs/: cri_lib.html  index.html  search.js
CRI-Python-Lib/docs/cri_lib/: cri_controller.html  cri_errors.html  cri_protocol_parser.html  robot_state.html
CRI-Python-Lib/examples/: README.md  asynchronous_control.py  cart_move.py  get_joint_position.py  move_relative.py  robot_control.py  start_program.py
CRI-Python-Lib/test/: test.py
CRI-Python-Lib/tests/: test_cri_parser.py
cv/: coord_math.py  new_move.txt  take_pics.py  video_cap.py
